k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-fastapi-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: backend-fastapi
    template:
        metadata:
            labels:
                component: backend-fastapi
        spec:
            containers:
                -   name: backend-fastapi
                    image: backend-fastapi
                    ports:
                        -   containerPort: 8888
