k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: frontend-fastapi
    template:
        metadata:
            labels:
                component: frontend-fastapi
        spec:
            containers:
                -   name: frontend-fastapi
                    image: frontend-fastapi
                    ports:
                        -   containerPort: 3000
