k8s/backend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: backend-fastapi-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: backend-fastapi
    ports:
        -   port: 8888
            targetPort: 8888
