k8s/frontend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-fastapi-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: frontend-fastapi
    ports:
        -   port: 3000
            targetPort: 3000
