k8s/redis-node-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis-node-service
spec:
    type: NodePort
    selector:
        component: redis
    ports:
        -   port: 6379
            nodePort: 32114
