k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        # nginx.ingress.kubernetes.io/rewrite-target: /$1
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-body-size: "200m"
        # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    rules:
        -   http:
                paths:
                    -   path:  /
                        pathType: ImplementationSpecific
                        backend:
                            service:
                                name: frontend-fastapi-cluster-ip-service
                                port:
                                    number: 3000
                    -   path: /api
                        pathType: ImplementationSpecific
                        backend:
                            service:
                                name: backend-fastapi-cluster-ip-service
                                port:
                                    number: 8888
                    -   path: /(.+)/api
                        pathType: ImplementationSpecific
                        backend:
                            service:
                                name: backend-fastapi-cluster-ip-service
                                port:
                                    number: 8888
